--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -2,11 +2,11 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="border-t border-slate-200/20 pt-8 sm:pt-10 lg:pt-12">
             <div class="flex justify-center items-center">
-                <p class="text-xs sm:text-sm font-light text-gray-900">&copy;
+                <p class="text-xs sm:text-sm font-light text-slate-900">&copy;
                     2024 PHZipcodes</p>
-                <span class="mx-3 text-gray-400">•</span>
+                <span class="mx-3 text-slate-400">•</span>
                 <a href="/contact"
-                    class="text-xs sm:text-sm font-light text-gray-900 hover:text-gray-600">Contact</a>
+                    class="text-xs sm:text-sm font-light text-slate-900 hover:text-slate-600">Contact</a>
             </div>
         </div>
     </div>
