--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="flex items-center justify-center overflow-y-auto">
     <div class="max-w-4xl w-full mx-auto text-center px-4 mt-8">
         <h1 aria-level="1"
-            class="text-3xl sm:text-4xl lg:text-6xl mb-10 tracking-tight">
+            class="text-4xl sm:text-5xl lg:text-6xl mb-10 tracking-tight">
             Philippines Zip Codes Locator
         </h1>
 
@@ -16,7 +16,7 @@
                     class="absolute inset-y-0 left-0 pl-4 flex items-center cursor-pointer"
                     id="search-icon" aria-hidden="true">
                     <img src="/static/icons/magnifying-glass-light.svg"
-                        class="h-6 w-6 opacity-50"
+                        class="h-6 w-6 opacity-80"
                         loading="eager"
                         fetchpriority="high"
                         aria-hidden="true">
@@ -28,7 +28,7 @@
                     autocomplete="off"
                     role="searchbox"
                     placeholder="Enter location or zipcode..."
-                    class="w-full pl-12 pr-16 py-4 text-lg rounded-2xl border shadow-lg focus:outline-none focus:ring-4 ring-gray-400"
+                    class="w-full pl-12 pr-16 py-4 text-lg rounded-2xl border shadow-lg focus:outline-none focus:ring-2 ring-yellow-800"
                     hx-get="/search"
                     hx-trigger="keyup changed delay:300ms"
                     hx-target="#results"
@@ -39,7 +39,7 @@
                     onclick="clearSearch(this)"
                     aria-label="Clear search input">
                     <img src="/static/icons/backspace-light.svg"
-                        class="h-6 w-6 opacity-50"
+                        class="h-6 w-6 opacity-80"
                         loading="eager"
                         aria-hidden="true">
                 </button>
@@ -67,33 +67,36 @@
                 class="grid grid-cols-1 sm:grid-cols-3 gap-4 sm:gap-6 w-full max-w-lg">
                 <a href="/regions"
                     aria-label="Browse by Regions"
-                    class="p-4 sm:p-5 flex flex-col items-center rounded-xl shadow-sm hover:shadow-lg border hover:border-yellow-500 transition-all duration-300 transform hover:-translate-y-1">
+                    class="p-4 sm:p-5 flex flex-col items-center rounded-xl shadow-sm hover:shadow-lg border hover:border-yellow-500 transition-all duration-300 transform">
                     <img src="/static/icons/island-duotone.svg"
                         class="w-6 h-6 sm:w-7 sm:h-7 mb-3 opacity-80"
+                        style="filter: invert(70%) sepia(75%) saturate(1000%) hue-rotate(360deg) brightness(100%) contrast(90%);"
                         loading="eager"
                         aria-hidden="true">
                     <span
-                        class="font-light text-sm text-slate-900 tracking-wide">Regions</span>
+                        class="font-light text-md text-slate-900 tracking-wide">Regions</span>
                 </a>
                 <a href="/provinces"
                     aria-label="Browse by Provinces"
-                    class="p-4 sm:p-5 flex flex-col items-center rounded-xl shadow-sm hover:shadow-lg border hover:border-yellow-500 transition-all duration-300 transform hover:-translate-y-1">
+                    class="p-4 sm:p-5 flex flex-col items-center rounded-xl shadow-sm hover:shadow-lg border hover:border-yellow-500 transition-all duration-300 transform">
                     <img src="/static/icons/map-trifold-duotone.svg"
                         class="w-6 h-6 sm:w-7 sm:h-7 mb-3 opacity-80"
+                        style="filter: invert(70%) sepia(75%) saturate(1000%) hue-rotate(360deg) brightness(100%) contrast(90%);"
                         loading="eager"
                         aria-hidden="true">
                     <span
-                        class="font-light text-sm text-slate-900 tracking-wide">Provinces</span>
+                        class="font-light text-md text-slate-900 tracking-wide">Provinces</span>
                 </a>
                 <a href="/municipalities"
                     aria-label="Browse by Cities and Municipalities"
-                    class="p-4 sm:p-5 flex flex-col items-center bg-white/95 backdrop-blur-sm rounded-xl shadow-sm hover:shadow-lg border hover:border-yellow-500 transition-all duration-300 transform hover:-translate-y-1">
+                    class="p-4 sm:p-5 flex flex-col items-center bg-white/95 backdrop-blur-sm rounded-xl shadow-sm hover:shadow-lg border hover:border-yellow-500 transition-all duration-300 transform">
                     <img src="/static/icons/city-duotone.svg"
                         class="w-6 h-6 sm:w-7 sm:h-7 mb-3 opacity-80"
+                        style="filter: invert(70%) sepia(75%) saturate(1000%) hue-rotate(360deg) brightness(100%) contrast(90%);"
                         loading="eager"
                         aria-hidden="true">
                     <span
-                        class="font-light text-sm text-slate-900 tracking-wide">Cities
+                        class="font-light text-md text-slate-900 tracking-wide">Cities
                         & Municipalities</span>
                 </a>
             </div>
